<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/create_study_group"
        android:icon="@drawable/ic_book_black_24dp"
        android:title="@string/title_create_study_group" />

    <item
        android:id="@+id/practice_test"
        android:icon="@drawable/ic_assignment_turned_in_black_24dp"
        android:title="@string/title_practice_test" />

    <item
        android:id="@+id/scheduler"
        android:icon="@drawable/ic_schedule_black_24dp"
        android:title="@string/title_scheduler" />

    <item
        android:id="@+id/find_study_group"
        android:icon="@drawable/ic_find_in_page_black_24dp"
        android:title="@string/title_find_study_groups" />

    <item
        android:id="@+id/study_tracker"
        android:icon="@drawable/ic_timelapse_black_24dp"
        android:title="@string/title_study_tracker" />

</menu>
