<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.school.optimstudy.find_study_group_activity.FindStudyGroup">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/newTestLayoutVertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter name of question"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/newOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/testNewOption" />

            <Button
                android:id="@+id/newQuestionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"

                android:text="@string/testNewQuestion" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/radiogroupoptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </RadioGroup>

        <Button
            android:id="@+id/createTestButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/testCreate" />

    </LinearLayout>
    </ScrollView>
</RelativeLayout>

